Fix: Display glitch when the screen is too narrow

--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,6 @@ h1 {
 
 .context .link {
   width: 100%;
-  height: 50px;
   background: #202020;
   text-align: center;
   padding: 8px 0;
@@ -44,6 +43,7 @@ h1 {
 }
 .context .link .hover {
   margin-top: 8px;
+  margin-bottom: 2px;
 }
 
 .context .link a {
